tests/negative/parser/runtime_default.orng
// runtime_default.orng:8:27: error: default values must be compile-time known
//         x: Int = get_four()
//                          ^
// runtime_default.orng:8:27: note: consider wrapping with `comptime`
// 
fn main() -> Int {
    struct My_Type {
        x: Int = get_four()
    }
    let y: My_Type
    _ = y
    34
}

fn get_four() -> Int { 4 }